[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "1.10.5"
thiserror = "1.0.24"
arrayref = "0.3.6"
borsh = "0.9.3"
borsh-derive = "0.9.3"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "1.10.5"
solana-validator = "1.10.5"
solana-logger = "=1.10.5"

[lib]
crate-type = ["cdylib", "lib"]
